

    WATO:
    * You can now have site-specific global settings when using
      distributed WATO (available in the "Distributed Monitoring")
    * bulk inventory: display percentage in progress bar
    * New option for full SNMP scan in bulk inventory
    * bulk operations now also available when checkboxes are off
    * LDAP: Added test to validate the configured role sync groups
    * Disabled replication type "peer" in site editor.
    * Added "permanently ignore" button to inventory services dialog which 
      links directly to the disabled services view
    * Added dignose page linked from host edit dialog. This can be used to test
      connection capabilities of hosts
    * The rule "Process inventory" now offers the same configuration options 
      as its manual check equivalent "State and count of processes"
    * New configuration option handle_count (windows only) in the rules
      "Process inventory" and "State and count of processes"
    * FIX: correct display of number of hosts in bulk inventory
    * FIX: nailed down ".siteid" exception when added new site
    * FIX: fixed setting for locking mode from 'ait' to 'wait'
    * FIX: avoid removal of tags from rules when not yet acknowledged
    * FIX: avoid need for apache restart when adding new service levels

    Livestatus:
    * Removed "livecheck". It never was really stable. Nagios4 has something
      similar built in. And also the Check_MK Micro Core.
    * table statehist: no longer computes an unmonitored state for hosts and
                       services on certain instances. 
                       (showed up as no hosts/services in the multisite gui)

1.2.3i4:
    Core:
    * Create inventory check also for hosts without services, if they
          have *no* ping tag.

    WATO:
    * Bulk inventory: speed up by use of cache files and doing stuff in
          groups of e.g. 10 hosts at once
    * Multisite connection: new button for cloning a connection

    Checks & Agents: